alignment corrected

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -480,3 +480,13 @@ span.tooltips:hover .tooltiptext {
 .bg-black {
   background-color: #000000 !important;
 }
+
+.projects-section .featured-text-right {
+  padding: 2rem;
+}
+@media (min-width: 992px) {
+  .projects-section .featured-text-right {
+    padding: 0 0 0 2rem;
+    border-right: 0.5rem solid #64a19d;
+  }
+}
